// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
.css-0,
[data-css-0] {
  border: 1px solid #eee;
  border-radius: 3px;
  background-color: #FFFFFF;
  cursor: pointer;
  font-size: 15px;
  padding: 3px 10px;
  margin: 10px;
}

<Button
  onClick={[Function]}
>
  <Component
    className="css-0"
    onClick={[Function]}
  >
    <button
      className="css-0"
      onClick={[Function]}
    >
      <span
        aria-label="so cool"
        role="img"
      >
        😀 😎 👍 💯
      </span>
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Another Button with text 1`] = `
.css-0,
[data-css-0] {
  border: 1px solid #eee;
  border-radius: 3px;
  background-color: #FFFFFF;
  cursor: pointer;
  font-size: 15px;
  padding: 3px 10px;
  margin: 10px;
}

<Button
  onClick={[Function]}
>
  <Component
    className="css-0"
    onClick={[Function]}
  >
    <button
      className="css-0"
      onClick={[Function]}
    >
      Hello Button
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Button with some emoji 1`] = `
.css-0,
[data-css-0] {
  border: 1px solid #eee;
  border-radius: 3px;
  background-color: #FFFFFF;
  cursor: pointer;
  font-size: 15px;
  padding: 3px 10px;
  margin: 10px;
}

<Button
  onClick={[Function]}
>
  <Component
    className="css-0"
    onClick={[Function]}
  >
    <button
      className="css-0"
      onClick={[Function]}
    >
      <span
        aria-label="so cool"
        role="img"
      >
        😀 😎 👍 💯
      </span>
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Button with text 1`] = `
.css-0,
[data-css-0] {
  border: 1px solid #eee;
  border-radius: 3px;
  background-color: #FFFFFF;
  cursor: pointer;
  font-size: 15px;
  padding: 3px 10px;
  margin: 10px;
}

<Button
  onClick={[Function]}
>
  <Component
    className="css-0"
    onClick={[Function]}
  >
    <button
      className="css-0"
      onClick={[Function]}
    >
      Hello Button
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
.css-0,
[data-css-0] {
  margin: 15px;
  max-width: 600px;
  line-height: 1.4;
  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
}

.css-1,
[data-css-1] {
  font-size: 15px;
  font-weight: 600;
  padding: 2px 5px;
  border: 1px solid #eae9e9;
  border-radius: 4px;
  background-color: #f3f2f2;
  color: #3a3a3a;
}

.css-2,
[data-css-2] {
  color: #1474f3;
  text-decoration: none;
  border-bottom: 1px solid #1474f3;
  padding-bottom: 2px;
  border-top: none;
  border-right: none;
  border-left: none;
  background-color: transparent;
  padding: 0;
  cursor: pointer;
  font: inherit;
}

.css-3,
[data-css-3] {
  color: #1474f3;
  text-decoration: none;
  border-bottom: 1px solid #1474f3;
  padding-bottom: 2px;
}

.css-4,
[data-css-4] {
  opacity: 0.5;
}

<Welcome
  showApp={[Function]}
>
  <Welcome__Main>
    <article
      className="css-0"
    >
      <Welcome__Title>
        <h1
          className="css-nil"
        >
          Welcome to storybook
        </h1>
      </Welcome__Title>
      <p>
        This is a UI component dev environment for your app.
      </p>
      <p>
        We've added some basic stories inside the 
        <Welcome__InlineCode>
          <code
            className="css-1"
          >
            src/stories
          </code>
        </Welcome__InlineCode>
         directory.
        <br />
        A story is a single state of one or more UI components. You can have as many stories as you want.
        <br />
        (Basically a story is like a visual test case.)
      </p>
      <p>
        See these sample 
        <Welcome__NavButton
          onClick={[Function]}
        >
          <button
            className="css-2"
            onClick={[Function]}
          >
            stories
          </button>
        </Welcome__NavButton>
         for a component called
         
        <Welcome__InlineCode>
          <code
            className="css-1"
          >
            Button
          </code>
        </Welcome__InlineCode>
        .
      </p>
      <p>
        Just like that, you can add your own components as stories.
        <br />
        You can also edit those components and see changes right away.
        <br />
        (Try editing the 
        <Welcome__InlineCode>
          <code
            className="css-1"
          >
            Button
          </code>
        </Welcome__InlineCode>
         stories located at
         
        <Welcome__InlineCode>
          <code
            className="css-1"
          >
            src/stories/index.js
          </code>
        </Welcome__InlineCode>
        .)
      </p>
      <p>
        Usually we create stories with smaller UI components in the app.
        <br />
        Have a look at the
         
        <Welcome__Link
          href="https://storybook.js.org/basics/writing-stories"
          rel="noopener noreferrer"
          target="_blank"
        >
          <a
            className="css-3"
            href="https://storybook.js.org/basics/writing-stories"
            rel="noopener noreferrer"
            target="_blank"
          >
            Writing Stories
          </a>
        </Welcome__Link>
         
        section in our documentation.
      </p>
      <Welcome__Note>
        <p
          className="css-4"
        >
          <b>
            NOTE:
          </b>
          <br />
          Have a look at the 
          <Welcome__InlineCode>
            <code
              className="css-1"
            >
              .storybook/webpack.config.js
            </code>
          </Welcome__InlineCode>
           to add webpack loaders and plugins you are using in this project.
        </p>
      </Welcome__Note>
    </article>
  </Welcome__Main>
</Welcome>
`;
